// Copyright 2011 The Goma Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.


syntax = "proto2";

import "api/goma_log.proto";

package devtools_goma;

option cc_generic_services = false;
option java_generic_services = false;
option py_generic_services = false;

service LogService {
  rpc SaveLog(SaveLogReq) returns (SaveLogResp) {
  }
}
